First changes, test
Just took a llook and chenged some little things

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Reclaim</h1>
       <h2 class="project-tagline">Web site hosted on github</h2>
       <a href="https://github.com/GrigorM/reclaim" class="btn">View on GitHub</a>
-      <a href="https://github.com/GrigorM/reclaim/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/GrigorM/reclaim/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/GrigorM/reclaim/zipball/master" style="display:none" class="btn">Download .zip</a>
+      <a href="https://github.com/GrigorM/reclaim/tarball/master" style="display:none" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
