--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -2,7 +2,7 @@
 category: Test
 description: ""
 img: phones.png
-layout: single-blogpost
+layout: post
 title: "This is a test blog post, let's see how it goes"
 ---
 <p>Hello world, editing and learning this jekyll theme, and reclaiming my own domain.</p>
