--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,12 @@ subTitle: Kush, çfarë, pse?
 ---
 
 <br/>
+	<h1 class="centered">RRETH FAQES</h1>
+	<hr>
+<br/>	
 <div class="col-sm-8">
 	<h1 class="centered">RRETH FAQES</h1>
 	<hr>
-	<br/>
 	<p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. 
 	Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. 
