--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ subTitle: Kush, çfarë, pse?
 ---
 
 <br/>
-	<h1 class="centered">RRETH FAQES</h1>
+	<h1 class="left fix-alignment">RRETH FAQES</h1>
 	<hr>
 <br/>	
 <div class="col-sm-8">
@@ -19,7 +19,7 @@ subTitle: Kush, çfarë, pse?
 	Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, 
 	nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
 	</p>
-</div>
+</div><br/>
 <div class="col-sm-4">
 	<a class="twitter-timeline"  href="https://twitter.com/grigormalo" data-widget-id="601344466797068288">Tweets by @grigormalo</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
