--- a/_posts/2014-09-23-blogpost-2.html
+++ b/_posts/2014-09-23-blogpost-2.html
@@ -3,6 +3,7 @@ category: Experiments
 description: ""
 img: phones.png
 layout: post
-title: "This is a test blog post, let's see how it goes"
+title: "Experimental blog post"
+excerpt: "This is a test blog post, let's see how it goes"
 ---
 <p>Hello world, editing and learning this jekyll theme, and reclaiming my own domain.</p>
