--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -2,7 +2,7 @@
 category: test
 description: ""
 img: phones.png
-layout: post
+layout: default
 title: "Test 1"
 excerpt: "This is a test blog post, let's see how it goes"
 ---
