--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -7,3 +7,5 @@ title: "Test 1"
 excerpt: "This is a test blog post, let's see how it goes"
 ---
 <p>Hello world, editing and learning this jekyll theme, and reclaiming my own domain.</p>
+<div>yo</div>
+<span>I think i got a bug</span>
