--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ subTitle: Kush, çfarë, pse?
 <br/>
 <h2 class="left fix-alignment">RRETH FAQES <span class="gray"> ______________</span></h2>
 <br/>	
-<div class="col-sm-12">
+<div class="col-sm-12" id="about">
 	<p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. 
 	Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. 
