--- a/_posts/sq/2014-09-23-blogpost-1.html
+++ b/_posts/sq/2014-09-23-blogpost-1.html
@@ -5,6 +5,7 @@ img: phones.png
 layout: post
 title: "Test 1"
 excerpt: "This is a test blog post, let's see how it goes"
+lang: sq
 ---
 <p>Hello world, editing and learning this jekyll theme, and reclaiming my own domain.</p>
 <div>yo</div>
