--- a/projects/index.html
+++ b/projects/index.html
@@ -18,8 +18,8 @@ subtitle: Innovation is now a nempty signifier
 					<figure>
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio06.jpg" alt="">
 						<figcaption>
-							<h5>PROJEKT 1</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
+							<h5>HARTA ZGJEDHORE</h5>
+							<a data-toggle="modal" href="election-map" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -32,8 +32,8 @@ subtitle: Innovation is now a nempty signifier
 					<figure>
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio07.jpg" alt="">
 						<figcaption>
-							<h5>PROJEKT 2</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
+							<h5>NoiseGen</h5>
+							<a data-toggle="modal" href="noise-generator" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -45,8 +45,8 @@ subtitle: Innovation is now a nempty signifier
 					<figure>
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio09.jpg" alt="">
 						<figcaption>
-							<h5>PROJEKT 3</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
+							<h5>BUXHETI I HAPUR</h5>
+							<a data-toggle="modal" href="open-budget" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
