--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@ subtitle: Innovation is now a nempty signifier
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio06.jpg" alt="">
 						<figcaption>
 							<h5>HARTA ZGJEDHORE</h5>
-							<a data-toggle="modal" href="election-map" class="btn btn-primary btn-lg">Më shumë</a>
+							<a href="election-map" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -33,7 +33,7 @@ subtitle: Innovation is now a nempty signifier
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio07.jpg" alt="">
 						<figcaption>
 							<h5>NoiseGen</h5>
-							<a data-toggle="modal" href="noise-generator" class="btn btn-primary btn-lg">Më shumë</a>
+							<a href="noise-generator" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -46,7 +46,7 @@ subtitle: Innovation is now a nempty signifier
 						<img class="img-responsive" src="/reclaim/img/portfolio/folio09.jpg" alt="">
 						<figcaption>
 							<h5>BUXHETI I HAPUR</h5>
-							<a data-toggle="modal" href="open-budget" class="btn btn-primary btn-lg">Më shumë</a>
+							<a href="open-budget" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
