--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ subTitle: Kush, çfarë, pse?
 	nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
 	</p>
 </div><br/>
-<div class="col-lg-5 col-md-6 col-sm-8 col-xs-12">
+<div class="col-lg-5 col-md-6 col-sm-8 col-xs-12" id="twitterfeed">
 	<a class="twitter-timeline"  href="https://twitter.com/grigormalo" data-widget-id="601344466797068288">Tweets by @grigormalo</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>          
