--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -1,6 +1,7 @@
 ---
-layout: single-project
+layout: projects-archive
 title: Buxheti i hapur
+subtitle: Innovation is now a nempty signifier
 ---
 <br/>
 <br/>
