What's the fucking problem?

--- a/projects/openbudget/index.html
+++ b/projects/openbudget/index.html
@@ -1,5 +1,5 @@
 ---
-layout: projects-archive
+layout: single-project
 title: Buxheti i hapur
 subtitle: Innovation is now a nempty signifier
 ---
@@ -52,6 +52,3 @@ të krijojë kopje të tij, ta modifikojë dhe ta ripublikojë, për sa kohë i referoh
 me kategorinë "buxheti i hapur". 
 </div>
 <div class="clearfix"></div>
-
-
-<div style="height: 300px; background-color: #000; display:block;"></div>
