--- a/projects/openbudget/index.html
+++ b/projects/openbudget/index.html
@@ -13,7 +13,7 @@ subtitle: Innovation is now a nempty signifier
 për të bërë më të qartë grafikisht ecurinë e tij gjatë viteve, si dhe shpërndarjen sipas funksioneve. 
 Të dhënat janë marrë nga <a href="http://www.financa.gov.al/al/raportime/buxheti/buxheti-ne-vite" target="_blank"> faqja e Ministrise se Financave</a>. 
 Në kohën e ndërtimit të aplikacionit, në këtë faqe gjendeshin vetëm të dhënat nga viti 2011 e në vazhdim, por sot mund te gjesh të dhëna që prej vitit 2003,
-çka e bën më interesant aplikacionin pasi mundëson krahasimin e shifrave në një periudhë më të gjatë kohore, dhe mund te kuptojme më qartë se si ka ecur buxheti gjate 
+&ccedil;ka e bën më interesant aplikacionin pasi mundëson krahasimin e shifrave në një periudhë më të gjatë kohore, dhe mund te kuptojme më qartë se si ka ecur buxheti gjate 
 gjithë kësaj kohe.
 </div>
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -36,7 +36,7 @@ të cilën është ndertuar. Processing tashmë ka një version te vetin për web (<a h
 e bën aplikacionin me praktik për tu shkruar, më të shpejtë në performancë, si dhe ndertimin e një ndërfaqeje që bazohet në elementët standardë
 të web-it më te thjeshë.
 
-Një tjetër mundësi do ishte rishkrimi me <a href="http://d3js.org/" target="_blank">d3.js</a>, një librari javascript e ndertuar posaçërisht për 
+Një tjetër mundësi do ishte rishkrimi me <a href="http://d3js.org/" target="_blank">d3.js</a>, një librari javascript e ndertuar posa&ccedil;ërisht për 
 vizualizime. Processing eshte shumë ok, por qëllimi i saj parësor janë grafikat interaktive në përgjithësi, nderkohë që me d3 leximi i të dhënave dhe 
 vizualizimi i tyre do ishte më i thjeshtë. 
 </div>
@@ -47,7 +47,7 @@ vizualizimi i tyre do ishte më i thjeshtë.
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 Pra projekti është i hapur për zhvillim të mëtejshëm. Kushdo që është i interesuar mund të aksesojë kodin në <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">github</a>,
 të krijojë kopje të tij, ta modifikojë dhe ta ripublikojë, për sa kohë i referohet autorit, sipas termave të 
-<a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget/blob/master/LICENSE" target="_blank">liçences</a>. Gjithashtu, mund te me kontaktoni
+<a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget/blob/master/LICENSE" target="_blank">li&ccedil;ences</a>. Gjithashtu, mund te me kontaktoni
 <a href="mailto:grigormalo@gmail.com">mua</a> personalisht, nëse jeni të interesuar për të bashkëpunuar. Për zhvillime të mëtejshme ndiqni blogpostet
 me kategorinë "buxheti i hapur". 
 </div>
