Fixes, buxheti i hapur

--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -9,46 +9,37 @@ subtitle: Innovation is now a nempty signifier
 <h2 class="left fix-alignment">BUXHETI I HAPUR <span class="gray"> ______________</span></h2>
 <br/>
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+<p>
 <a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> &euml;sht&euml; nj&euml; aplikacion q&euml; b&euml;n vizualizimin e z&euml;rave t&euml; buxhetit t&euml; Republik&euml;s s&euml; Shqiperis&euml; nd&euml;r vite,
 p&euml;r t&euml; b&euml;r&euml; m&euml; t&euml; qart&euml; grafikisht ecurin&euml; e tij gjat&euml; viteve, si dhe shp&euml;rndarjen sipas funksioneve. 
 T&euml; dh&euml;nat jan&euml; marr&euml; nga <a href="http://www.financa.gov.al/al/raportime/buxheti/buxheti-ne-vite" target="_blank"> faqja e Ministrise se Financave</a>. 
 N&euml; koh&euml;n e nd&euml;rtimit t&euml; aplikacionit, n&euml; k&euml;t&euml; faqe gjendeshin vet&euml;m t&euml; dh&euml;nat nga viti 2011 e n&euml; vazhdim, por sot mund te gjesh t&euml; dh&euml;na q&euml; prej vitit 2003,
 &ccedil;ka e b&euml;n m&euml; interesant aplikacionin pasi mund&euml;son krahasimin e shifrave n&euml; nj&euml; periudh&euml; m&euml; t&euml; gjat&euml; kohore, dhe mund te kuptojme m&euml; qart&euml; se si ka ecur buxheti gjate 
-gjith&euml; k&euml;saj kohe.
-</div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-<img src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
-</div>
-<div class="clearfix"></div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-Aplikacioni &euml;sht&euml; nd&euml;rtuar me gjuh&euml;n e programimit <a href="https://processing.org/" target="_blank">Processing</a> dhe p&euml;rshtatur p&euml;r web me librarin&euml; 
+gjith&euml; k&euml;saj kohe.</p>
+<p>Aplikacioni &euml;sht&euml; nd&euml;rtuar me gjuh&euml;n e programimit <a href="https://processing.org/" target="_blank">Processing</a> dhe p&euml;rshtatur p&euml;r web me librarin&euml; 
 <a href="http://processingjs.org/" target="_blank">Processing.js</a>. Hostuar n&euml; nj&euml; platform&euml; Wordpress (falenderojm&euml; 
-<a href="http://tablo-al.com/" target="_blank">Tablo-n&euml;<a> p&euml;r bashk&euml;punimin), t&euml; dh&euml;nat t&euml; hedhura n&euml; databaz&euml;n e faqes merren me PHP/MySQL.
+<a href="http://tablo-al.com/" target="_blank">Tablo-n&euml;</a> p&euml;r bashk&euml;punimin), t&euml; dh&euml;nat t&euml; hedhura n&euml; databaz&euml;n e faqes merren me PHP/MySQL.
 P&euml;r aplikacionin kan&euml; punuar Bruna Rizvanolli, Jona Rizvanolli, dhe un&euml;. Versionin aktual te kodit mund ta gjeni <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">k&euml;tu</a>.
-</div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-</div>
-<div class="clearfix"></div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+</p>
+<p>
 Gjithsesi, k&euml;t&euml; projekt nuk dua ta l&euml; me kaq. Ka shume gj&euml;ra q&euml; mund t&euml; p&euml;rmir&euml;sohen, ne kodin e shkruar, komunikimin me databaz&euml;n, apo dhe vete gjuh&euml;n me 
 t&euml; cil&euml;n &euml;sht&euml; ndertuar. Processing tashm&euml; ka nj&euml; version te vetin p&euml;r web (<a href="http://p5js.org/" target="_blank">p5.js</a>), nj&euml; librari javascript shkrimi me t&euml; cil&euml;n
 e b&euml;n aplikacionin me praktik p&euml;r tu shkruar, m&euml; t&euml; shpejt&euml; n&euml; performanc&euml;, si dhe ndertimin e nj&euml; nd&euml;rfaqeje q&euml; bazohet n&euml; element&euml;t standard&euml;
 t&euml; web-it m&euml; te thjesh&euml;.
-
+</p>
+<p>
 Nj&euml; tjet&euml;r mund&euml;si do ishte rishkrimi me <a href="http://d3js.org/" target="_blank">d3.js</a>, nj&euml; librari javascript e ndertuar posa&ccedil;&euml;risht p&euml;r 
 vizualizime. Processing eshte shum&euml; ok, por q&euml;llimi i saj par&euml;sor jan&euml; grafikat interaktive n&euml; p&euml;rgjith&euml;si, nderkoh&euml; q&euml; me d3 leximi i t&euml; dh&euml;nave dhe 
 vizualizimi i tyre do ishte m&euml; i thjesht&euml;. 
-</div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-</div>
-<div class="clearfix"></div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-Pra projekti &euml;sht&euml; i hapur p&euml;r zhvillim t&euml; m&euml;tejsh&euml;m. Kushdo q&euml; &euml;sht&euml; i interesuar mund t&euml; aksesoj&euml; kodin n&euml; <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">github</a>,
+</p>
+<p>Pra projekti &euml;sht&euml; i hapur p&euml;r zhvillim t&euml; m&euml;tejsh&euml;m. Kushdo q&euml; &euml;sht&euml; i interesuar mund t&euml; aksesoj&euml; kodin n&euml; <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">github</a>,
 t&euml; krijoj&euml; kopje t&euml; tij, ta modifikoj&euml; dhe ta ripublikoj&euml;, p&euml;r sa koh&euml; i referohet autorit, sipas termave t&euml; 
 <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget/blob/master/LICENSE" target="_blank">li&ccedil;ences</a>. Gjithashtu, mund te me kontaktoni
 <a href="mailto:grigormalo@gmail.com">mua</a> personalisht, n&euml;se jeni t&euml; interesuar p&euml;r t&euml; bashk&euml;punuar. P&euml;r zhvillime t&euml; m&euml;tejshme ndiqni blogpostet
 me kategorin&euml; "buxheti i hapur". 
+</p>
 </div>
-<div class="clearfix"></div>
+
+<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+<img src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
+</div>
