--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -8,7 +8,7 @@ subtitle: Innovation is now a nempty signifier
 <br/>
 <h2 class="left fix-alignment">BUXHETI I HAPUR <span class="gray"> ______________</span></h2>
 <br/>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+<article class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 <p>
 <a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> &euml;sht&euml; nj&euml; aplikacion q&euml; b&euml;n vizualizimin e z&euml;rave t&euml; buxhetit t&euml; Republik&euml;s s&euml; Shqiperis&euml; nd&euml;r vite,
 p&euml;r t&euml; b&euml;r&euml; m&euml; t&euml; qart&euml; grafikisht ecurin&euml; e tij gjat&euml; viteve, si dhe shp&euml;rndarjen sipas funksioneve. 
@@ -38,8 +38,9 @@ t&euml; krijoj&euml; kopje t&euml; tij, ta modifikoj&euml; dhe ta ripublikoj&eum
 <a href="mailto:grigormalo@gmail.com">mua</a> personalisht, n&euml;se jeni t&euml; interesuar p&euml;r t&euml; bashk&euml;punuar. P&euml;r zhvillime t&euml; m&euml;tejshme ndiqni blogpostet
 me kategorin&euml; "buxheti i hapur". 
 </p>
-</div>
+</article>
 
-<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+<figure class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 <img src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
-</div>
+<figcaption></figcaption>
+</figure>
