--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -46,7 +46,7 @@ subtitle: Innovation is now a nempty signifier
 	</figure>
 </section>
 <aside class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-{% for post in site.categories[test] %}
+{% for post in site.categories.test %}
 	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </aside>
