--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -3,9 +3,9 @@ layout: single-project
 title: Buxheti i hapur
 subtitle: Innovation is now a nempty signifier
 ---
+<br/>
+<br/>
 <section class="col-lg-10 col-md-10 col-sm-10 col-xs-12 lefty">
-	<br/>
-	<br/>
 	<h2 class="left fix-alignment">BUXHETI I HAPUR <span class="gray"> ______________</span></h2>
 	<br/>
 	<article class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -46,6 +46,7 @@ subtitle: Innovation is now a nempty signifier
 	</figure>
 </section>
 <aside class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+<h2>Postime rreth projektit</h2>
 {% for post in site.categories.test %}
 	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
