--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -41,11 +41,11 @@ subtitle: Innovation is now a nempty signifier
 	</article>
 
 	<figure class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-	<img src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
-	<figcaption></figcaption>
+		<img class="fit-image" alt="Buxheti i hapur, screenshot" src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
+		<figcaption></figcaption>
 	</figure>
 </section>
-<aside class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+<aside class="col-lg-2 col-md-2 col-sm-2 col-xs-12 category-sidebar">
 <h2>Postime rreth projektit</h2>
 {% for post in site.categories.test %}
 	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
