Pergatitje e templateve te tjera

--- a/projects/open-budget/index.html
+++ b/projects/open-budget/index.html
@@ -1,14 +1,14 @@
 ---
 layout: single-project
 title: Buxheti i hapur
-subtitle: Innovation is now a nempty signifier
+subtitle: Innovation is now an empty signifier
 ---
 <br/>
 <br/>
-<section class="col-lg-10 col-md-10 col-sm-10 col-xs-12 lefty">
+<section class="col-lg-9 col-md-9 col-sm-9 col-xs-12 lefty">
 	<h2 class="left fix-alignment">BUXHETI I HAPUR <span class="gray"> ______________</span></h2>
 	<br/>
-	<article class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+	<article class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
 	<p>
 	<a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> &euml;sht&euml; nj&euml; aplikacion q&euml; b&euml;n vizualizimin e z&euml;rave t&euml; buxhetit t&euml; Republik&euml;s s&euml; Shqiperis&euml; nd&euml;r vite,
 	p&euml;r t&euml; b&euml;r&euml; m&euml; t&euml; qart&euml; grafikisht ecurin&euml; e tij gjat&euml; viteve, si dhe shp&euml;rndarjen sipas funksioneve. 
@@ -45,9 +45,9 @@ subtitle: Innovation is now a nempty signifier
 		<figcaption></figcaption>
 	</figure>
 </section>
-<aside class="col-lg-2 col-md-2 col-sm-2 col-xs-12 category-sidebar">
+<aside class="col-lg-3 col-md-3 col-sm-3 col-xs-12 category-sidebar">
 <h2>Postime rreth projektit</h2>
-{% for post in site.categories.test %}
+{% for post in site.categories.buxheti %}
 	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </aside>
