--- a/about/index.html
+++ b/about/index.html
@@ -8,16 +8,25 @@ subTitle: Kush, çfarë, pse?
 <section class="lefty col-lg-6 col-md-6 col-sm-6 col-xs-12" >
 	<h2 class="left fix-alignment">RRETH FAQES <span class="gray"> ______________</span></h2>
 	<br/>	
-	<div class="fix-alignment" id="about">
+	<div class="fix-alignment" id="about" itemscope itemtype="http://schema.org/Person">
 		<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. 
-		Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. 
-		Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. 
-		Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-		Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. 
-		Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. 
-		Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, 
-		nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
+		Kjo faqe shërben si blogu im personal. Këtu mund të gjenden postime mbi teknika dhe mjete që unë i konsideroj interesante, tutoriale, projekte te ndryshme open source, 
+		por edhe kritika mbi narrativat dominante në botën e teknologjisë. Vetë website është ndertuar me faqe statike, pra pa servera dhe databaza,
+		duke përdorur <a href="https://pages.github.com/" target="_blank">Github Pages</a> dhe <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>. 
+		Veç faktit që nuk të duhet të paguash asgje (përveç emrit te domainit), kjo teknikë të jep më shumë kontroll mbi postimet e tua, e bën strukturën
+		e faqes më të qartë, dhe si një faqe personale, te jep mundësi te kontrollosh prezencën tënde dixhitale, larg platformave të mëdha dhe drejt 
+		një web-i të më të decentralizuar, siç ishte menduar dhe nga krijuesit e tij.
+		<br/>
+		Unë jam <span itemprop="name">Grigor Malo</span>, i diplomuar për Inxhinieri Informatike, dhe momentalisht punoj si <span itemprop="jobTitle">
+		web developer</span>. Interesat e mia përfshijnë web-in, kodimi kreativ, vizualizimet, politika, kritika të shoqerisë dhe të teknologjisë dhe
+		muzika. 
+		<br/>
+		Mënyra kontaktimi: <br/>
+		<a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a><br/>
+		<a href="https://github.com/GrigorM" target="_blank"><span itemprop="url">Github</span></a><br/>
+		<a href="https://www.facebook.com/grigor.komunisti" target="_blank"><span itemprop="url">Facebook</span></a><br/>
+		<a href="mailto:grigormalo@gmail.com" target="_blank"><span itemprop="url">Email</span></a><br/>
+		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>
 		</p>
 	</div><br/>
 	<div class="col-lg-5 col-md-6 col-sm-8 col-xs-12" id="twitterfeed">
