--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ subTitle: Kush, çfarë, pse?
 		një web-i të më të decentralizuar, siç ishte menduar dhe nga krijuesit e tij.
 		<br/><br/>
 		Unë jam <span itemprop="name">Grigor Malo</span>, i diplomuar për Inxhinieri Informatike, dhe momentalisht punoj si <span itemprop="jobTitle">
-		web developer</span>. Interesat e mia përfshijnë web-in, kodimi kreativ, vizualizimet, politika, kritika të shoqerisë dhe të teknologjisë dhe
+		web developer</span>. Interesat e mia janë web-i, kodimi kreativ, vizualizimet, politika, kritika shoqërore dhe teknologjike dhe
 		muzika. 
 		<br/><br/>
 		Mënyra kontaktimi: <br/>
