--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,8 @@ subTitle: Kush, çfarë, pse?
 		një web-i të më të decentralizuar, siç ishte menduar dhe nga krijuesit e tij.
 		<br/><br/>
 		Unë jam <span itemprop="name">Grigor Malo</span>, i diplomuar për Inxhinieri Informatike, dhe momentalisht punoj si <span itemprop="jobTitle">
-		web developer</span>. Interesat e mia janë web-i, kodimi kreativ, vizualizimet, politika, kritika shoqërore dhe teknologjike dhe
-		muzika. 
+		web developer</span>. Mund të vetëpërshkruhem si teknoskeptik dhe i majtë radikal. I interesuar rreth web-it, kodimit kreativ, vizualizimeve, politikës, kritikës shoqërore dhe teknologjike dhe
+		muzikës. 
 		<br/><br/>
 		Mënyra kontaktimi: <br/>
 		<a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a><br/>
@@ -27,6 +27,9 @@ subTitle: Kush, çfarë, pse?
 		<a href="https://www.facebook.com/grigor.komunisti" target="_blank"><span itemprop="url">Facebook</span></a><br/>
 		<a href="mailto:grigormalo@gmail.com" target="_blank"><span itemprop="url">Email</span></a><br/>
 		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>
+		{% for social in site.social %}
+			<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.title }} fac"></i> <span class="network-name">{{ social.title }}</span></a>
+		{% endfor %}		
 		</p>
 	</div><br/>
 	<div class="col-lg-5 col-md-6 col-sm-8 col-xs-12" id="twitterfeed">
