--- a/about/index.html
+++ b/about/index.html
@@ -22,13 +22,13 @@ subTitle: Kush, çfarë, pse?
 		muzikës. 
 		<br/><br/>
 		Mënyra kontaktimi: <br/>
-		<a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a><br/>
+		<!--<a href="https://twitter.com/grigormalo" target="_blank"><span itemprop="url">Twitter</span></a><br/>
 		<a href="https://github.com/GrigorM" target="_blank"><span itemprop="url">Github</span></a><br/>
 		<a href="https://www.facebook.com/grigor.komunisti" target="_blank"><span itemprop="url">Facebook</span></a><br/>
 		<a href="mailto:grigormalo@gmail.com" target="_blank"><span itemprop="url">Email</span></a><br/>
-		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>
+		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>-->
 		{% for social in site.social %}
-			<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.title }} fac"></i> <span class="network-name">{{ social.title }}</span></a>
+			<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.icon }} fac"></i> <span class="network-name">{{ social.title }}</span></a>
 		{% endfor %}		
 		</p>
 	</div><br/>
