Front page canvas

--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ subTitle: Kush, çfarë, pse?
 		<a href="mailto:grigormalo@gmail.com" target="_blank"><span itemprop="url">Email</span></a><br/>
 		<a href="https://grigormalo.withknown.com/" target="_blank"><span itemprop="url">Known</span></a><br/>-->
 		{% for social in site.social %}
-			<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.icon }} fac"></i> <span>{{ social.title }}</span></a>
+			<a href="{{ social.url }}" class="soc"><i class="fa fa-{{ social.icon }} fac"></i> <span>{{ social.title }}</span></a>&nbsp;&nbsp;
 		{% endfor %}		
 		</p>
 	</div><br/>
