--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -1,12 +1,39 @@
 --- 
-category: test
+category: buxheti i hapur
 description: ""
-img: phones.png
 layout: post
-title: "Test 1"
-excerpt: "This is a test blog post, let's see how it goes"
+title: "Aplikacioni Buxheti i Hapur"
+excerpt: "Vizualizim i zërave të buxhetit të Republikës së Shqipërisë ndër vite."
 lang: sq
 ---
-<p>Hello world, editing and learning this jekyll theme, and reclaiming my own domain.</p>
-<div>yo</div>
-<span>I think i got a bug</span>
+<article class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+	<p>
+	<a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> është një aplikacion që bën vizualizimin e zërave të buxhetit të Republikës së Shqiperisë ndër vite,
+	për të bërë më të qartë grafikisht ecurinë e tij gjatë viteve, si dhe shpërndarjen sipas funksioneve. 
+	Të dhënat janë marrë nga <a href="http://www.financa.gov.al/al/raportime/buxheti/buxheti-ne-vite" target="_blank"> faqja e Ministrisë së Financave</a>. 
+	Në kohën e ndërtimit të aplikacionit, në këtë faqe gjendeshin vetëm të dhënat nga viti 2011 e në vazhdim, por sot mund te gjesh të dhëna që prej vitit 2003,
+	çka e bën më interesant aplikacionin pasi mundëson krahasimin e shifrave në një periudhë më të gjatë kohore, dhe mund te kuptojme më qartë se si ka ecur buxheti gjate 
+	gjithë kësaj kohe.</p>
+	<p>Aplikacioni është ndërtuar me gjuhën e programimit <a href="https://processing.org/" target="_blank">Processing</a> dhe përshtatur për web me librarinë 
+	<a href="http://processingjs.org/" target="_blank">Processing.js</a>. Hostuar në një platformë Wordpress (falenderojmë 
+	<a href="http://tablo-al.com/" target="_blank">Tablo-në</a> për bashkëpunimin), të dhënat të hedhura në databazën e faqes merren me PHP/MySQL.
+	Për aplikacionin kanë punuar Bruna Rizvanolli, Jona Rizvanolli, dhe unë. Versionin aktual te kodit mund ta gjeni <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">këtu</a>.
+	</p>
+	<p>
+	Gjithsesi, këtë projekt nuk dua ta lë me kaq. Ka shume gjëra që mund të përmirësohen, ne kodin e shkruar, komunikimin me databazën, apo dhe vete gjuhën me 
+	të cilën është ndertuar. Processing tashmë ka një version te vetin për web (<a href="http://p5js.org/" target="_blank">p5.js</a>), një librari javascript shkrimi me të cilën
+	e bën aplikacionin me praktik për tu shkruar, më të shpejtë në performancë, si dhe ndertimin e një ndërfaqeje që bazohet në elementët standardë
+	të web-it më te thjeshë.
+	</p>
+	<p>
+	Një tjetër mundësi do ishte rishkrimi me <a href="http://d3js.org/" target="_blank">d3.js</a>, një librari javascript e ndertuar posaçërisht për 
+	vizualizime. Processing eshte shumë ok, por qëllimi i saj parësor janë grafikat interaktive në përgjithësi, nderkohë që me d3 leximi i të dhënave dhe 
+	vizualizimi i tyre do ishte më i thjeshtë. 
+	</p>
+	<p>Pra projekti është i hapur për zhvillim të mëtejshëm. Kushdo që është i interesuar mund të aksesojë kodin në <a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget" target="_blank">github</a>,
+	të krijojë kopje të tij, ta modifikojë dhe ta ripublikojë, për sa kohë i referohet autorit, sipas termave të 
+	<a href="https://github.com/GrigorM/Buxheti-i-hapur--Open-budget/blob/master/LICENSE" target="_blank">liçences</a>. Gjithashtu, mund te me kontaktoni
+	<a href="mailto:grigormalo@gmail.com">mua</a> personalisht, nëse jeni të interesuar për të bashkëpunuar. Për zhvillime të mëtejshme ndiqni blogpostet
+	me kategorinë "buxheti i hapur". 
+	</p>
+</article>
