--- a/_posts/2014-09-23-blogpost-1.html
+++ b/_posts/2014-09-23-blogpost-1.html
@@ -1,12 +1,11 @@
 --- 
-category: buxheti i hapur
-description: ""
+category: buxheti
 layout: post
 title: "Aplikacioni Buxheti i Hapur"
 excerpt: "Vizualizim i zërave të buxhetit të Republikës së Shqipërisë ndër vite."
 lang: sq
 ---
-<article class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+<article class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 	<p>
 	<a href="http://tablo-al.com/buxheti-i-hapur/" target="_blank">Buxheti i hapur</a> është një aplikacion që bën vizualizimin e zërave të buxhetit të Republikës së Shqiperisë ndër vite,
 	për të bërë më të qartë grafikisht ecurinë e tij gjatë viteve, si dhe shpërndarjen sipas funksioneve. 
@@ -37,3 +36,7 @@ lang: sq
 	me kategorinë "buxheti i hapur". 
 	</p>
 </article>
+<figure class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+	<img class="fit-image" alt="Buxheti i hapur, screenshot" src='/reclaim/img/portfolio/buxheti-i-hapur/buxhetihapur.png'>
+	<figcaption></figcaption>
+</figure>
